updated cluster number